# kagent-ls

./: .gitignore  LICENSE  README.md
deploy/: agent-runtime-write-rbac.yaml  crd.yaml  operator.yaml  runtime-rbac.yaml  sample-agent.yaml
operator/: .dockerignore  Dockerfile  Makefile  PROJECT  README.md  go.mod  go.sum
operator/api/v1alpha1/: agent_types.go  doc.go  groupversion_info.go  zz_generated.deepcopy.go
operator/cmd/: main.go
operator/cmd/test-kubelet/: main.go
operator/config/crd/: kustomization.yaml
operator/config/default/: kustomization.yaml  manager_auth_proxy_patch.yaml  namespace.yaml
operator/config/manager/: manager.yaml
operator/config/rbac/: kustomization.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml
operator/config/runtime/: agent-runtime-binding.yaml  agent-runtime-clusterrole.yaml  (+4 more)
runtime/: .dockerignore  Dockerfile  README.md  pyproject.toml
runtime/src/agent_runtime/: __init__.py  history.py  langchain_tools.py  llm.py  logging_config.py  main.py  server.py
runtime/src/agent_runtime/agent/: __init__.py  _langchain_executor.py  base.py  cluster_agent.py  ops_agent.py
runtime/src/agent_runtime/tools/: __init__.py  _k8s_call.py  base.py  constants.py  deployment_status_tool.py  deployment_tool.py  event_tool.py  kube.py  node_tool.py  pod_describe_tool.py  pod_log_tool.py  pod_tool.py  restart_deployment_tool.py  restart_pod_tool.py  scale_deployment_tool.py
runtime/src/agent_runtime/webui/: index.html
runtime/tests/: __init__.py  test_history.py  test_logging.py  test_tools.py
(+12 files in other folders)
