[project]
name = "agent-runtime"
version = "0.2.0"
description = "Kubernetes Native Agent Runtime — long-running chat server backed by langchain + OpenAI-compatible LLM"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "kagent-ls maintainers" }
]
license = { text = "Apache-2.0" }
dependencies = [
    "kubernetes>=28.1.0",
    "langchain>=0.3,<1.0",
    "langchain-openai>=0.2,<1.0",
    "langchain-core>=0.3,<1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
agent-runtime = "agent_runtime.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_runtime"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.uv]
package = true
managed = true
